k8s/api-gateway/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: alexkalinck-dev
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/component: gateway
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/part-of: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-gateway
        app.kubernetes.io/component: gateway
        app.kubernetes.io/version: "1.0"
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: api-gateway
          image: docker.io/alexkalinck/apigateway-api-gateway:1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - name: http
              containerPort: 8083
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: alexkalinck-dev
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/component: gateway
spec:
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
